--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Breaking en tu Pantalla
-email: avinylo@gmail.com
+email: avinylo.fp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Ésta página web está diseñada para ser una fuente de información para mis alumnos 
   de baile. Él tiempo que dedicamos a aprender durante la clase no siempre es suficiente,
