--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Ésta página web está diseñada para ser una fuente de información para mis alumnos 
   de baile. Él tiempo que dedicamos a aprender durante la clase no siempre es suficiente,
   espero que te guste lo que encuentras aquí y te sea útil.
-baseurl: "/BntP" # the subpath of your site, e.g. /blog
-# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "avinylo.com" # the subpath of your site, e.g. /blog
+url: "http://avinylo.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
